# cab-ride-price-predictor

./: .gitignore  README.md  pyproject.toml  vercel.json
backend/: main.py  requirements.txt
helper_functions/: prep_data_function.py
mobile/: App.tsx  package-lock.json  package.json
mobile/constants/: locations.ts
models/: category_levels.joblib  holdout_sample.csv  xgb_model.json
notebooks/: 00_base_model.ipynb  01_xgboost_tuned.ipynb  02_xgboost_pooled_feature.ipynb  base_deterministic_model.ipynb  data_exploration.ipynb  data_preprocessing_and_feature_engineering.ipynb  feature_engineering.ipynb
scripts/: train_model.py
web/: index.html
web/src/: App.css  App.tsx  RideCard.tsx  RideDetailModal.tsx  RideMap.tsx  index.css  locations.ts  types.ts
