[project]
name = "summer-internship-demo-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "path>=17.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
